--- a/Front-end/Dockerfile
+++ b/Front-end/Dockerfile
@@ -4,6 +4,9 @@ RUN apk update &&\
     apk upgrade &&\
     apk add nodejs npm
 
+RUN mkdir /backend; \
+    chmod +rwx /backend
+WORKDIR /backend
 COPY . .
 
 RUN npm install
