--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.5",
     "js-sha256": "^0.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
